# video-slide-extractor

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  extract_slides.py  pyproject.toml
video_slide_extractor/: cli.py  core.py  main.py  output_path_format.py
