[tool.poetry]
name = "video-slide-extractor"
version = "0.1.0"
description = ""
authors = ["Tim Vergenz <vergenzt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.5.5"
docopt = "^0.6.2"
single-source = "^0.3.0"
tqdm = "^4.63.0"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
